# emograph

./: .gitignore  README.md  config.yml  config_temlate.yml  emoji_sample.py  main.py  pyproject.toml  requirements.txt
emograph/: utils.py
emograph/fonts/: __init__.py
example/: config_example.yml  main.py
src/emograph/: builder.py
src/emograph/font/: manager.py  type.py
src/emograph/fonts/: __init__.py
src/emograph/utils/: color_utils.py
